<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:gravity="bottom"
    android:minHeight="450dp"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:weightSum="6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/withdraw_sure"
        android:background="@drawable/sorucontainer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        
        <Button
            android:layout_width="1dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:id="@+id/cekilyes"
            android:layout_marginRight="10dp"
            android:textColor="@drawable/girisbuttontextcolor"
            android:background="@drawable/girisbutton"
            android:layout_height="match_parent" />

        <Button
            android:textAllCaps="false"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:id="@+id/cekilno"
            android:layout_marginLeft="10dp"
            android:textColor="@drawable/girisbuttontextcolor"
            android:background="@drawable/girisbutton"
            android:layout_height="match_parent" />


    </LinearLayout>

</LinearLayout>